[package]
name = "WebSocket-EchoServer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
http = "0.2.9"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
routerify = "3.0.0"
routerify-websocket = "3.0.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
tungstenite = "0.16.0"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3.6"