[package]
name = "WebSocket-EchoServer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
rand = { version = "0.8" }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.4"
tracing-subscriber = "0.3.18"
uuid = { version = "1.1.2", features = ["serde", "v4"] }